Fix: add overflow: ellipsis to news article preamble

--- a/src/pages/News/NewsItem.module.css
+++ b/src/pages/News/NewsItem.module.css
@@ -22,6 +22,11 @@
 }
 
 .preamble {
+  display: inherit;
+  overflow: hidden;
+
+  text-overflow: ellipsis;
+
   color: var(--color-text-2);
 
   font-size: 1rem;
